2010-09-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* FindObjectWidget.cpp (keyPressEvent): fixed #1755 "hitting enter
	after editing search attribute in the Find panel should trigger
	search"

	* FindObjectWidget.cpp (matchAttr): fixed #1760 'Search by
	attribute "name" should search by name or label'.

	* FindObjectWidget.cpp (objectInserted): fixed #1757 Allow
	searching by attributes even after an object is dropped into the
	drop area in search panel.

	* newFirewallDialog.cpp (browseTemplate): fixed #1759 "Use default
	template library" button seems to do nothing. This button should
	only be enabled if user switched to their own library of template
	objects. The button should be disabled if they switched back to
	the standard template library or never switched to their own one.

	* newHostDialog.cpp (finishClicked): fixed #1761 "blank interface
	name is possible in new host wizard"

	* FWObjectPropertiesFactory.cpp (getInterfaceNameExamplesForHostOS):
	fixed #1753 "Set interface name hint based on firewall platform
	and host OS". The placeholder text in the interface name and label
	input fields in the new firewall wizard will depend on the host OS
	chosen in the first page of the wizard.

	* utils.cpp (validateName): fixed #1751 "Don't allow interface
	names to be blank". The GUI should not allow the name of any
	object to be blank.

2010-09-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel.cpp (ProjectPanel::inspect): fixed #1718 "Inspect
	generated files" dialog says "Multiple firewalls" even when there
	is only one

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget::InterfaceEditorWidget):
	added "placeholder" text to the interface name and label input
	fields. This text is displayed in greyed-out small font inside
	the imput field but is cleared as soon as user starts their input.
	The text gives user a prompt as of what is expected in each input
	field. The "placeholder" text support is available only in Qt 4.7